[tool.poetry]
name = "rp-youtube"
version = "0.1.0"
description = "A program for downloading videos from YouTube"
authors = ["Ilya Bystrikov <thesudro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
